syntax = "proto3";

option csharp_namespace = "AgentService";

service GrpcAgent {
    rpc GetAllAgents (getAllRequest) returns (AgentResponse);
}

message getAllRequest {}

message GrpcAgentModel {
    int32 id = 1;
    string codeName = 2;
    string securityClearance = 3;
}

message AgentResponse {
    repeated GrpcAgentModel agents = 1;
}